# autoresearch

./: prepare.py  pyproject.toml  train.py
